Fix connection-modal height problem on mobile device

--- a/assets/css/connection-modal.scss
+++ b/assets/css/connection-modal.scss
@@ -3,6 +3,7 @@
 #connection-modal {
   .modal-content {
     width: 80vw;
+    max-height: 90%;
   }
 
   div.amishi {
